[api][runtime][python] Add minimal Event lineage (#923)